menu scroll on mobile fix

--- a/src/index.css
+++ b/src/index.css
@@ -274,3 +274,9 @@ img {
 section {
   scroll-margin-top: 80px; /* wysokość navbara */
 }
+
+@media (max-width: 560px) {
+  section {
+    scroll-margin-top: 108px; /* wysokość navbara na urządzeniach mobilnych */
+  }
+}
